<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/g1_balance_box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background5"
        app:layout_constraintVertical_bias="0.045"
        app:layout_constraintWidth_percent="0.775"
        app:srcCompat="@drawable/g1_balance_box" />

    <TextView
        android:id="@+id/text_balance_g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/background5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/balance_g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00000"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/background5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.5" />

    <ImageView
        android:id="@+id/g1_scrolling_box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/g1_scrolling_box"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintWidth_percent="0.97"
        app:layout_constraintVertical_bias="0.32"
        app:layout_constraintHorizontal_bias="0.5" />

    <ImageView
        android:id="@+id/win_box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/g1_balance_box"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintWidth_percent="0.775"
        app:layout_constraintVertical_bias="0.758"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/text_win_g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/background5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/win_g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00000"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/background5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742"
        app:layout_constraintHorizontal_bias="0.5" />

    <ImageButton
        android:id="@+id/button_spin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pink_button"
        app:layout_constraintWidth_percent="0.68"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintVertical_bias="0.96"
        app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
        android:id="@+id/text_spin_g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spin"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905"
        app:layout_constraintHorizontal_bias="0.5" />

    <ImageButton
        android:id="@+id/button_plus_g1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pink_rectangle_button"
        app:layout_constraintWidth_percent="0.17"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintHorizontal_bias="0.11"/>
    <TextView
        android:id="@+id/minus_g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="@+id/background5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735"
        app:layout_constraintHorizontal_bias="0.163" />

    <ImageButton
        android:id="@+id/button_minus_g1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pink_rectangle_button"
        app:layout_constraintWidth_percent="0.17"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintHorizontal_bias="0.88"/>

    <TextView
        android:id="@+id/plus_g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="@+id/background5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735"
        app:layout_constraintHorizontal_bias="0.825" />

    <ImageButton
        android:id="@+id/button_back_g1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/button_back"
        app:layout_constraintWidth_percent="0.16"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintVertical_bias="0.046"
        app:layout_constraintHorizontal_bias="0.05" />

    <TextView
        android:id="@+id/back_g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0432"
        app:layout_constraintHorizontal_bias="0.1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.26"
        app:layout_constraintHeight_percent="0.33"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintVertical_bias="0.38" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.26"
        app:layout_constraintHeight_percent="0.33"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintVertical_bias="0.38" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.26"
        app:layout_constraintHeight_percent="0.33"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintVertical_bias="0.38" />


</androidx.constraintlayout.widget.ConstraintLayout>